modification des types d'équipement repository "extends equipementInformatiqueRepository" en "extends JpaRepository"